--- a/about.html
+++ b/about.html
@@ -35,9 +35,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <br />
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/about.html">About Me</a>
