--- a/about.html
+++ b/about.html
@@ -60,19 +60,23 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <img src="images/yoga.png" alt="Yoga" class="img-fluid rounded" />
+            <img
+              src="images/yoga.png"
+              alt="Yoga-app-image"
+              class="img-fluid rounded"
+            />
           </div>
           <div class="col-md-4">
             <img
               src="images/weather.png"
-              alt="Weather"
+              alt="Weather-app-image"
               class="img-fluid rounded"
             />
           </div>
           <div class="col-md-4">
             <img
               src="images/yogurt.png"
-              alt="Yogurt"
+              alt="Yogurt-app-image"
               class="img-fluid rounded"
             />
           </div>
@@ -82,7 +86,13 @@
     <br />
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:[shauna10@hotmail.co.uk]" class="email-link"> Shauna </a>
+      <a
+        href="mailto:[shauna10@hotmail.co.uk]"
+        class="email-link"
+        title="contact email link"
+      >
+        Shauna
+      </a>
     </div>
   </body>
   <script
