--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Responsive Week 3 Homework" description="Shauna's SheCodes Responsive Week 3 Homework Advanced Tools" />
     <link rel="stylesheet" href="src/style.css" type="text/css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -14,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>SheCodes</title>
+    <title>SheCodes Responsive Week 3 Homework</title>
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
@@ -33,13 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html" title="homepage link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About Me</a>
+                  <a class="nav-link" href="about.html" title="about me page link">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html#contact">Contact Me</a>
+                  <a class="nav-link" href="about.html#contact" tital="link to contact section">Contact Me</a>
                 </li>
               </ul>
             </div>
@@ -57,7 +58,7 @@
 </br>
   <div class="container">
       <div class="row">
-        <div class="col-md-6"><img src="images/yoga.png" alt="Yoga" class="img-fluid rounded" /></div>
+        <div class="col-md-6"><img src="images/yoga.png" alt="Yoga-app-image" class="img-fluid rounded" /></div>
         <div class="col-md-6"><h4 class="mb-3">Yoga App<h4>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
           <button class="app-button" href="#">Launch Yoga App</button>
@@ -72,14 +73,14 @@
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
                 <button class="app-button" href="#">Launch Weather App</button>
               </div>
-          <div class="col-md-6"><img src="images/weather.png" alt="Weather" class="img-fluid rounded" /></div>
+          <div class="col-md-6"><img src="images/weather.png" alt="Weather-app-image" class="img-fluid rounded" /></div>
         </div>
       </div>
   </br>
 </br>
 <div class="container">
     <div class="row">
-      <div class="col-md-6"><img src="images/yogurt.png" alt="Yogurt" class="img-fluid rounded" /></div>
+      <div class="col-md-6"><img src="images/yogurt.png" alt="Yogurt-app-image" class="img-fluid rounded" /></div>
       <div class="col-md-6"><h4 class="mb-3">Yogurt App<h4>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
         <button class="app-button" href="#">Launch Yogurt App</button>
