--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html" title="homepage link">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/index.html" title="homepage link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html" title="about me page link">About Me</a>
+                  <a class="nav-link" href="/about.html" title="about me page link">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html#contact" tital="link to contact section">Contact Me</a>
+                  <a class="nav-link" href="/about.html#contact" tital="link to contact section">Contact Me</a>
                 </li>
               </ul>
             </div>
@@ -51,8 +51,8 @@
     <h3>I am based in the UK</h3>
   </br>
   <div class="info">
-      <div><a class="contact" href="about.html">About Me</a></div>
-      <div><a class="contact" href="about.html#contact">Contact Me</a></div>
+      <div><a class="contact" href="/about.html">About Me</a></div>
+      <div><a class="contact" href="/about.html#contact">Contact Me</a></div>
     </div>
   </br>
 </br>
